force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__Disable_For_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disable_For_Opportunity_Type__c</fullName>
    <description>Specify opportunity type picklist value names, separated by commas, to disable a tender type for that opportunity type.</description>
    <inlineHelpText>Specify opportunity type picklist value names, separated by commas, to disable a tender type for that opportunity type.</inlineHelpText>
    <label>Disable For Opportunity Type</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>