force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__Enable_Encrypted_Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Encrypted_Payment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable encrypted fields for credit card input.</description>
    <inlineHelpText>Enable encrypted fields for credit card input.</inlineHelpText>
    <label>Enable Encrypted Payment Information</label>
    <type>Checkbox</type>
</CustomField>