force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__Enable_Zero_Dollar_Authorizations__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Zero_Dollar_Authorizations__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the external payment gateway will use zero dollar authorizations upon creation and update of recurring gifts, which do not require an authorization reversal.</description>
    <inlineHelpText>When checked, the external payment gateway will use zero dollar authorizations upon creation and update of recurring gifts, which do not require an authorization reversal.</inlineHelpText>
    <label>Enable Zero Dollar Authorizations</label>
    <type>Checkbox</type>
</CustomField>