force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Tender_Type__mdt/fields/ucinn_ascendv2__External_Payment_Gateway_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_Payment_Gateway_Type__c</fullName>
    <label>External Payment Gateway Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cybersource</fullName>
                <default>true</default>
                <label>Cybersource</label>
            </value>
            <value>
                <fullName>Spreedly</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>TouchNet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>